--- a/app/src/main/res/layout/register_activity_main.xml
+++ b/app/src/main/res/layout/register_activity_main.xml
@@ -297,6 +297,40 @@
                             tools:targetApi="lollipop"/>
                     </LinearLayout>
 
+                    <android.support.v7.widget.CardView
+                        android:id="@+id/fineartsCardView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="2dp"
+                        android:layout_weight="1">
+
+                        <LinearLayout
+                            android:id="@+id/fineartsLayout"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:id="@+id/fineartsImageView"
+                                android:layout_width="match_parent"
+                                android:layout_height="100dp"
+                                android:layout_weight="5"
+                                android:background="#B2DFDB"
+                                android:padding="5dp"
+                                android:src="@drawable/ic_contacts_black_24dp" />
+
+                            <TextView
+                                android:id="@+id/fineartsTextView"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:text="Fine Arts"
+                                android:textAlignment="center"
+                                android:textAppearance="@android:style/TextAppearance.Material.Medium"
+                                tools:targetApi="lollipop"/>
+                        </LinearLayout>
+
+                    </android.support.v7.widget.CardView>
                 </android.support.v7.widget.CardView>
             </TableRow>
 
